# Mono-F1

./: .gitignore
.github/workflows/: sync-backend-gitlab.yml
Backend/MonoF1_Ktor/: .gitlab-ci.yml  Dockerfile  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
Backend/MonoF1_Ktor/app/: build.gradle
Backend/MonoF1_Ktor/app/src/main/kotlin/: Application.kt
Backend/MonoF1_Ktor/app/src/main/kotlin/di/: dataModule.kt  domainModule.kt  networkModule.kt  presentationModule.kt
Backend/MonoF1_Ktor/app/src/main/kotlin/error/: ErrorManager.kt
Backend/MonoF1_Ktor/data/: build.gradle
Backend/MonoF1_Ktor/data/src/main/kotlin/auth/: AuthRepositoryImpl.kt
Backend/MonoF1_Ktor/data/src/main/kotlin/car/: CarRepositoryImpl.kt
Backend/MonoF1_Ktor/data/src/main/kotlin/f1/: F1RepositoryImpl.kt
Backend/MonoF1_Ktor/data/src/main/kotlin/hue/: HueRepositoryImpl.kt
Backend/MonoF1_Ktor/data/src/main/kotlin/sensor/: SensorRepositoryImpl.kt
Backend/MonoF1_Ktor/domain/: build.gradle
Backend/MonoF1_Ktor/domain/src/main/kotlin/auth/: AuthRepository.kt  ValidateApiKeyUseCase.kt
Backend/MonoF1_Ktor/gradle/wrapper/: gradle-wrapper.properties
Backend/MonoF1_Ktor/presentation/: build.gradle
Backend/MonoF1_Ktor/presentation/src/main/kotlin/: Routes.kt
Backend/MonoF1_Ktor/src/main/kotlin/: Main.kt
Hardware/cars/: Cargo.toml  sdkconfig.defaults
Hardware/cars/.cargo/: config.toml
Hardware/cars/src/: config.rs  main.rs
Hardware/sensor/: Cargo.toml  sdkconfig.defaults
Hardware/sensor/src/: config_example.rs  main.rs
(+22 files in other folders)
