[package]
name = "cars"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "cars"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"


[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["alloc", "experimental"] }
embedded-svc = "0.28.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
ws2812-esp32-rmt-driver = { version = "0.13.1", features = ["smart-leds-trait"] }
smart-leds = "0.4"


[build-dependencies]
embuild = "0.33"

[package.metadata.esp-idf-sys]
esp_idf_component_manager = "y"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_websocket_client", version = "1.2" }